add service config page